--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "class-validator": "^0.12.2",
     "koa": "^2.7.0",
     "koa-bodyparser": "^4.2.0",
     "koa-logger": "^3.1.0",
@@ -11,7 +12,7 @@
     "koa2-cors": "^2.0.5",
     "redis": "^2.8.0",
     "ts-node": "^3.3.0",
-    "typescript": "^3.5.2"
+    "typescript": "^3.9.7"
   },
   "devDependencies": {
     "@types/redis": "^2.8.13",
@@ -34,7 +35,7 @@
   "scripts": {
     "build": "tsc --build",
     "start": "ts-node-dev src/server.ts",
-    "test": "NODE_ENV=test PORT=7788 jest",
+    "test": "set NODE_ENV=test & set PORT=7788 & jest",
     "test:watch": "npm run test -- --watchAll"
   },
   "jest": {
